--- a/style.css
+++ b/style.css
@@ -1,16 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-body {
-  background-color: #fdf8f4;
-  font-family: "DM Sans", sans-serif;
-  overflow-x: hidden;
-  max-width: 100%;
-  scroll-behavior: smooth;
-}
-
 /* -----------value---------------- */
 
 :root {
@@ -915,53 +902,12 @@ z
   }
 }
 
-@media screen and (max-width: 1000px) {
-  .main-features-box {
-    grid-template-columns: auto;
-  }
-  .work-grid {
-    grid-template-columns: auto;
-  }
-  .section-idea {
-    grid-template-columns: auto;
-  }
-  .idea-doc {
-    order: 2;
-  }
-  .section-footer {
-    grid-template-columns: auto;
-    justify-content: center;
-  }
-  .section-footer > div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: column nowrap;
-    margin: 2rem 0;
-  }
-}
-
-@media screen and (max-width: 1000px) {
-  :root {
-    --navfont: 1rem;
-    --logofont: 1.5rem;
-
-    --headfont: 1.5rem;
-    --headfont2: 1rem;
-    --pfont: 0.75rem;
-  }
-  .reviewcontain1,
-  .reviewcontain2 {
-    grid-column: 1/-1;
-  }
-}
-
 .commingSoon {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100vh;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background-color: black;
   opacity: 0.85;
   z-index: 9999;
@@ -971,6 +917,7 @@ z
   justify-content: space-around;
   align-items: center;
 }
+
 .cslogo {
   width: 100%;
   color: white;
@@ -983,40 +930,32 @@ z
   width: 100%;
   color: white;
   text-align: center;
-
   height: 16%;
-
   font-family: "Lucida Console", "Lucida Sans Typewriter", monaco,
     "Bitstream Vera Sans Mono", monospace;
-  font-size: 24px;
+  font-size: 20%;
   font-style: normal;
   font-variant: normal;
   font-weight: 700;
-  line-height: 26.4px;
 }
 
 .csh2 {
   width: 100%;
-  color: white;
+  color: gray;
   text-align: center;
-
   height: 8%;
-
   font-family: "Lucida Console", "Lucida Sans Typewriter", monaco,
     "Bitstream Vera Sans Mono", monospace;
-  font-size: 24px;
+  font-size: 10%;
   font-style: normal;
   font-variant: normal;
   font-weight: 700;
-  line-height: 26.4px;
 }
 
 .cscountdown {
   width: 100%;
   color: white;
-
   padding: 0% 10%;
-
   height: 10%;
 }
 
@@ -1024,8 +963,8 @@ z
   position: absolute;
   top: 0;
   left: 0;
-  width: 100vh;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   z-index: 1;
   overflow: hidden;
 }
