--- a/style.css
+++ b/style.css
@@ -933,7 +933,7 @@ z
   height: 16%;
   font-family: "Lucida Console", "Lucida Sans Typewriter", monaco,
     "Bitstream Vera Sans Mono", monospace;
-  font-size: 20%;
+  font-size: 1.5rem;
   font-style: normal;
   font-variant: normal;
   font-weight: 700;
@@ -946,7 +946,7 @@ z
   height: 8%;
   font-family: "Lucida Console", "Lucida Sans Typewriter", monaco,
     "Bitstream Vera Sans Mono", monospace;
-  font-size: 10%;
+  font-size: 0.6rem;
   font-style: normal;
   font-variant: normal;
   font-weight: 700;
