--- a/style.css
+++ b/style.css
@@ -921,9 +921,17 @@ z
   width: 100%;
   color: white;
   position: relative;
-  top: 5%;
+  top: 2%;
   padding: 0% 10%;
   height: 13%;
+  display: flex;
+  justify-content: center;
+}
+
+.thelogo {
+  position: static;
+  max-width: 100%;
+  height: 100%;
 }
 
 .csh1 {
